# tasman-dbt-utils

./: .gitignore  README.md  dbt_project.yml  package-lock.yml  packages.yml  pyproject.toml  run_test.sh
.github/: CODEOWNERS
.github/workflows/: ci-check.yml
integration_tests/: dbt_project.yml  package-lock.yml  pyproject.toml
integration_tests/data/: data_profile.csv
integration_tests/tests/: test_create_table_profile_print.sql
macros/: _macros.yml  create_table_profile.sql  do_table_scan.sql  drop_old_relations.sql  get_object_keys.sql  import.sql  mcr_deduplication.sql  mcr_get_columns.sql  mcr_include.sql  mcr_include_ref.sql  mcr_include_source.sql  mcr_tst_join.sql  set_warehouse_size.sql
macros/helpers/: is_date_or_time.sql  is_numeric.sql  is_text.sql
tests/generic/: test_count_distinct_matches_source.sql  test_sum_matches_source.sql
