[tool.poetry]
name = "tasman-dbt-utils"
version = "0.0.1"
description = "Package with useful utility features."
authors = ["Tasman"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
isort = "^5.12.0"

[tool.poetry.group.dbt.dependencies]
dbt-snowflake = "^1.8.0"
dbt-bigquery = "^1.8.0"

[tool.poetry.group.dev.dependencies]
sqlfluff = "^2.3.0"
sqlfluff-templater-dbt = "^2.3.0"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
extend-exclude = [".venv/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
